WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320243
[cleanup] Pass FlexLayoutItem instead of RenderBox to the remaining FlexFormattingUtils flex-item helpers
https://bugs.webkit.org/show_bug.cgi?id=320243
Summary
[cleanup] Pass FlexLayoutItem instead of RenderBox to the remaining FlexForma...
alan
Reported
2026-07-24 16:58:39 PDT
ssia
Attachments
[fast-cq]Patch
(18.71 KB, patch)
2026-07-24 17:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-07-24 17:01:27 PDT
Created
attachment 480775
[details]
[fast-cq]Patch
EWS
Comment 2
2026-07-24 19:40:59 PDT
Committed
317911@main
(6c9904c1764a): <
https://commits.webkit.org/317911@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 480775
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-07-24 19:41:13 PDT
<
rdar://problem/183181872
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug